# pv-profiler

./: .gitignore  README.md  pyproject.toml
data/processed/: plants.csv
data/sonnja_pv3_2015/: einleuchtend_wrdata_2015_wr1_5min.parquet  einleuchtend_wrdata_2015_wr1_5min_tool.parquet  metadata.json
docs/: BEGINNER_RUNBOOK.md  CODEX_CONTEXT.md  TIMEZONE_GUIDE.md  architecture.md  assumptions.md  design_decisions.md  pipeline.md
examples/: config.yml  example_single.csv  manifest.csv
outputs/validation_run_02/: batch_summary.csv  benchmark_results.csv
outputs/validation_run_02/diagnostics_v2/: aggregated_metrics.csv
scripts/: benchmark_synthetic.py  evaluate_batch.py  make_pv_naive_fixed_offset.py  plot_benchmark_results.py  plot_block5_results.py
src/: show_parquet.py
src/pv_profiler/: __init__.py  batch.py  benchmark.py  block_diagnostics.py  block_fit.py  block_io.py  block_normalization.py  block_orientation.py  block_orientation_fit.py  block_sdt.py  capacity.py  cli.py  config.py  diagnostics_v2.py  io.py  normalization.py  orientation.py  pipeline.py  reporting.py  sdt_pipeline.py  shading.py  types.py  utils.py  validation.py
tests/: test_batch_and_benchmark.py  test_benchmark_east_west.py  test_block1_loader.py  test_block2_sdt.py  test_block3_fit.py  test_block4_normalization.py  test_block5_orientation_fit.py  test_cli_fix_shifts.py  test_cli_two_plane_weight_mode.py  test_diagnostics_v2.py  test_imports.py  test_io.py  test_orientation_capacity_shading.py  test_plot_benchmark_results_smoke.py  test_regressions.py  test_run_single_smoke.py  test_sdt_clear_and_extract.py  test_sdt_failure_artifacts.py  test_smoke_run_single.py  test_validation.py
tools/: check_parquet.py  convert_rawdata.py  make_tool_input_parquet.py
(+644 files in other folders)
