[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pv-profiler"
version = "0.2.0"
description = "PV identification pipeline scaffold with implemented blocks A-C"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "solar-data-tools==2.1.1",
  "pvlib>=0.11.2,<0.12",
  "pandas",
  "numpy<2.1",
  "pyyaml",
  "matplotlib",
  "pyarrow",
  "pytest",
]

[project.scripts]
pv-ident = "pv_profiler.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
