[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pv-profiler"
version = "0.2.0"
description = "PV orientation profiling pipeline (MVP)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas",
  "numpy",
  "solardatatools>=2.1.1,<2.2",
  "pvlib",
  "pyyaml",
  "pyarrow",
  "pytest",
]

[project.scripts]
pv-ident = "pv_profiler.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
